<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:background="@android:color/white"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_4dp"
                        android:text="@string/email"
                        android:textColor="@color/colorLightBlue"
                        android:textStyle="bold" />

                    <io.cloudyfox.interview.utils.CustomTextInputLayout
                        android:id="@+id/emailTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:boxStrokeErrorColor="@android:color/white">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/emailEdtText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_48dp"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/edittext_border"
                            android:hint="@string/enter_email" />
                    </io.cloudyfox.interview.utils.CustomTextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_4dp"
                        android:text="@string/password"
                        android:textColor="@color/colorLightBlue"
                        android:textStyle="bold" />

                    <io.cloudyfox.interview.utils.CustomTextInputLayout
                        android:id="@+id/passwordTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_48dp"
                            android:background="@drawable/edittext_border"
                            android:hint="@string/enter_pswd"
                            android:inputType="textPassword" />
                    </io.cloudyfox.interview.utils.CustomTextInputLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:padding="@dimen/_8dp"
                    android:text="@string/forgot_password" />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signInBttn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48dp"
                    android:layout_margin="@dimen/_8dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:text="@string/signin"
                    android:elevation="@dimen/_4dp"
                    android:textColor="@android:color/white" />
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="gone"
                        android:indeterminateTint="@color/colorRed"
                        android:progressTint="@color/colorRed"
                        android:layout_margin="@dimen/_16dp"/>
                </FrameLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/signupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/_4dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_4dp"
            android:text="@string/signup"
            android:textColor="@color/colorRed"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>