<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:id="@+id/mainLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:background="@android:color/white"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_4dp"
                        android:text="@string/full_name"
                        android:textColor="@color/colorLightBlue"
                        android:textStyle="bold" />

                    <io.cloudyfox.interview.utils.CustomTextInputLayout
                        android:id="@+id/fullNameTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/fullNameEdtText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_48dp"
                            android:background="@drawable/edittext_border"
                            android:hint="@string/enter_fullname"
                            android:imeOptions="actionNext" />
                    </io.cloudyfox.interview.utils.CustomTextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_4dp"
                        android:text="@string/email"
                        android:textColor="@color/colorLightBlue"
                        android:textStyle="bold" />

                    <io.cloudyfox.interview.utils.CustomTextInputLayout
                        android:id="@+id/emailTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_48dp"
                            android:background="@drawable/edittext_border"
                            android:hint="@string/enter_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress" />
                    </io.cloudyfox.interview.utils.CustomTextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_4dp"
                        android:text="@string/password"
                        android:textColor="@color/colorLightBlue"
                        android:textStyle="bold" />

                    <io.cloudyfox.interview.utils.CustomTextInputLayout
                        android:id="@+id/passwordTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_48dp"
                            android:background="@drawable/edittext_border"
                            android:hint="@string/enter_pswd"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword" />
                    </io.cloudyfox.interview.utils.CustomTextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_4dp"
                        android:text="@string/confirm_pswd"
                        android:textColor="@color/colorLightBlue"
                        android:textStyle="bold" />

                    <io.cloudyfox.interview.utils.CustomTextInputLayout
                        android:id="@+id/confirmPasswordTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/confirmPasswordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_48dp"
                            android:background="@drawable/edittext_border"
                            android:hint="@string/enter_pswd"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword" />
                    </io.cloudyfox.interview.utils.CustomTextInputLayout>

                </LinearLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signUpBttn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48dp"
                        android:layout_margin="@dimen/_8dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/button_background"
                        android:elevation="@dimen/_4dp"
                        android:gravity="center"
                        android:text="@string/signup"
                        android:visibility="visible"
                        android:textColor="@android:color/white" />
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="gone"
                        android:indeterminateTint="@color/colorRed"
                        android:progressTint="@color/colorRed"
                        android:layout_margin="@dimen/_16dp"/>
                </FrameLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <LinearLayout
        android:id="@+id/signinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/_4dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_4dp"
            android:text="@string/signin"
            android:textColor="@color/colorRed"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>